# PROJECT
# ----------------------------------------------------------------------------------------------------------------------

[tool.poetry]
name = "alexcochran"
version = "0.1.0"
description = "Meta repository for my GitHub account that displays my personal README."
authors = ["Alex Cochran <alex.s.cochran@proton.me>"]
license = "GPL-3.0-or-later"
readme = "README.md"


# DEPENDENCIES
# ----------------------------------------------------------------------------------------------------------------------

[tool.poetry.dependencies]
python = "^3.11"
grip = "^4.6.1"
